<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/eh_screen_padding_h"
        android:paddingRight="@dimen/eh_screen_padding_h"
        android:paddingTop="@dimen/eh_screen_padding_v"
        android:paddingBottom="@dimen/eh_screen_padding_v">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/config_title"
            android:textAppearance="@style/TextAppearance.Enginehost.ScreenTitle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eh_space_xs"
            android:text="@string/config_intro"
            android:textAppearance="@style/TextAppearance.Enginehost.Caption" />

        <Button
            android:id="@+id/chooseConfigFolderButton"
            style="@style/Widget.Enginehost.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eh_space_m"
            android:text="@string/choose_game_folder" />

        <TextView
            android:id="@+id/configFolderLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eh_space_s"
            android:background="@drawable/eh_card_bg"
            android:padding="@dimen/eh_space_s"
            android:text="@string/no_folder_selected"
            android:textAppearance="@style/TextAppearance.Enginehost.Mono"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/detectionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eh_space_s"
            android:text="@string/detection_waiting"
            android:textAppearance="@style/TextAppearance.Enginehost.Body" />

        <Button
            android:id="@+id/browseAllPluginsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eh_space_s"
            android:text="@string/browse_all_plugin_engines"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/editorFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eh_space_m"
                android:text="@string/label_engine_family"
                android:textAppearance="@style/TextAppearance.Enginehost.Caption" />

            <Button
                android:id="@+id/engineButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eh_space_xs" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eh_space_s"
                android:text="@string/label_engine_context"
                android:textAppearance="@style/TextAppearance.Enginehost.Caption" />

            <Button
                android:id="@+id/contextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eh_space_xs" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eh_space_s"
                android:text="@string/label_engine_version"
                android:textAppearance="@style/TextAppearance.Enginehost.Caption" />

            <EditText
                android:id="@+id/engineVersionField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eh_space_xs"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eh_space_xs"
                android:text="@string/engine_version_help"
                android:textAppearance="@style/TextAppearance.Enginehost.Caption" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eh_space_s"
                android:text="@string/label_runtimes"
                android:textAppearance="@style/TextAppearance.Enginehost.Caption" />

            <Button
                android:id="@+id/runtimesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eh_space_xs" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eh_space_s"
                android:text="@string/label_plugin_versions"
                android:textAppearance="@style/TextAppearance.Enginehost.Caption" />

            <Button
                android:id="@+id/pluginVersionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eh_space_xs" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eh_space_s"
                android:text="@string/label_exec_file"
                android:textAppearance="@style/TextAppearance.Enginehost.Caption" />

            <Button
                android:id="@+id/execFileButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eh_space_xs" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eh_space_s"
                android:text="@string/label_options"
                android:textAppearance="@style/TextAppearance.Enginehost.Caption" />

            <LinearLayout
                android:id="@+id/optionsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eh_space_xs"
                android:orientation="vertical" />

            <Button
                android:id="@+id/addOptionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eh_space_xs"
                android:text="@string/add_option" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eh_space_xs"
                android:text="@string/options_help"
                android:textAppearance="@style/TextAppearance.Enginehost.Caption" />

            <Button
                android:id="@+id/saveConfigButton"
                style="@style/Widget.Enginehost.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eh_space_m"
                android:text="@string/save_config" />

            <Button
                android:id="@+id/testConfigButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eh_space_s"
                android:text="@string/test_config" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
