<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/eh_space_m">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/catalog_title"
            android:textAppearance="@style/TextAppearance.Enginehost.ScreenTitle" />

        <TextView
            android:id="@+id/statusText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eh_space_xs"
            android:text="@string/catalog_intro"
            android:textAppearance="@style/TextAppearance.Enginehost.Caption" />

        <Button
            android:id="@+id/refreshButton"
            style="@style/Widget.Enginehost.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eh_space_m"
            android:text="@string/refresh_all" />

        <Button
            android:id="@+id/installFromFileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eh_space_s"
            android:text="@string/install_from_file" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eh_space_l"
            android:text="@string/releases_heading"
            android:textAppearance="@style/TextAppearance.Enginehost.SectionTitle" />

        <TextView
            android:id="@+id/releaseFilterNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eh_space_xs"
            android:textAppearance="@style/TextAppearance.Enginehost.Caption"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/releaseList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eh_space_s"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/releasesEmptyState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eh_space_xs"
            android:textAppearance="@style/TextAppearance.Enginehost.Body"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eh_space_l"
            android:text="@string/origins_heading"
            android:textAppearance="@style/TextAppearance.Enginehost.SectionTitle" />

        <LinearLayout
            android:id="@+id/originList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eh_space_s"
            android:orientation="vertical" />

        <EditText
            android:id="@+id/originInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eh_space_s"
            android:hint="@string/origin_url_hint"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:maxLines="1" />

        <Button
            android:id="@+id/addOriginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eh_space_s"
            android:text="@string/add_custom_origin" />

    </LinearLayout>
</ScrollView>
